refactor: improve the implementation of timelog service